# vault-cli

./: Cargo.toml  NOTICES.md  README.md  deny.toml  install.sh
.github/workflows/: ci.yml  release.yml
src/: agent.rs  db.rs  main.rs  server.rs
src/cmd/: apikey.rs  audit.rs  auth.rs  billing.rs  common.rs  deadman.rs  decisions.rs  drops.rs  env.rs  files.rs  grants.rs  groups.rs  http.rs  inbox.rs  log.rs  mod.rs  notarize.rs  secrets.rs  tombstone.rs  watchdog.rs  will.rs
