[package]
name = "vault-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
vault-core = { git = "ssh://git@github.com/blindkeep-vault/vault-core.git" }
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
hex = "0.4"
uuid = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
pbkdf2 = "0.12"
sha2 = "0.10"
hmac = "0.12"
hkdf = "0.12"
ed25519-dalek = { version = "2", features = ["rand_core"] }
chrono = "0.4"
bip39 = "2"
rand = "0.8"
mime_guess = "2"
rpassword = "7"
dirs = "5"
x25519-dalek = { version = "2", features = ["static_secrets"] }

