[package]
name = "vault-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
vault-core = { git = "ssh://git@github.com/blindkeep-vault/vault-core.git", features = ["client"] }
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.13", default-features = false, features = ["blocking", "json", "query", "rustls"] }
hex = "0.4"
uuid = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
pbkdf2 = "0.12"
sha2 = "0.10"
hmac = "0.12"
hkdf = "0.12"
ed25519-dalek = { version = "2", features = ["rand_core"] }
chrono = "0.4"
bip39 = "2"
rand = "0.8"
aes-gcm = "0.10"
mime_guess = "2"
rpassword = "7"
dirs = "6"
x25519-dalek = { version = "2", features = ["static_secrets"] }
nix = { version = "0.31", features = ["process", "signal", "fs", "mman", "user"] }
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "net"] }
rusqlite = { version = "0.39", features = ["bundled"] }
tower-http = { version = "0.6", features = ["cors"] }
jsonwebtoken = { version = "10", features = ["aws_lc_rs"] }

